# sankhya-mcp

./: .env.example  .gitignore  .npmignore  README.md  package-lock.json  package.json  pyproject.toml  spec-v2-typescript.md  spec.md  tsconfig.json
docs/boletos-emissao/: Exportacao_XMLs_NFe_Sankhya.md  Sankhya_Guia_Correcao_Quantidades_OP_Apontamento_NotaFiscal.md.md
docs/dashboards-html5/: adendo_aspas_sankhya.md  aprendizados_otimizacao_querys.md  dashboard_compras_sankhya.md  guia_dashboard_html5_sankhya.md
docs/reabertura-ops/: Base_Conhecimento_Correcao_STP_REABRE_OP.md  Fluxo_Decisao_Edicao_Exclusao_Apontamento_OP.md
documentation/: como-adicionar-conteudo.md
ingest/: chunker.py  chunker.ts  embedder.py  embedder.ts  image-describer.ts  image_describer.py  index-builder.ts  index.ts  index_builder.py  ingest.py
src/: server.py  server.ts
